--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body{
 }
 
 #quiz-container{
-    max-width:600px;
+    max-width: 600px;
     margin: auto;
     padding: 20px;
     border: 1px solid #ddd;
@@ -19,6 +19,11 @@ body{
 
 input[type="radio"]{
     margin-right: 10px;
+}
+
+label {
+    margin-right: 30px;
+    cursor: pointer;
 }
 
 #submit-answer{
